istio-cop/certmanager/web-api-gw-https.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: web-api-gateway
spec:
  selector:
    istio: ingressgateway 
  servers:
  # - port:
  #     number: 80
  #     name: http
  #     protocol: HTTP
  #   hosts:
  #   - "hellocloud.io"
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - "hellocloud.io"    
    tls:
      mode: SIMPLE
      credentialName: hellocloud-cert
